# ePaper-Frame

./: .gitignore  Makefile  README.md  epaperFrame-schematic.fzz  platformio.ini
scripts/: imgRead.py
scripts/converter/: converter.c
scripts/converter-rs/: Cargo.toml
scripts/converter-rs/src/: main.rs  main.rs.bak
scripts/converter-rs/src/file_picker/: mod.rs
scripts/converter-rs/src/logging/: mod.rs
scripts/converter-rs/src/utils/: mod.rs
scripts/converter-zig/: build.zig
scripts/converter-zig/src/: convert.zig  img.zig  lib.zig  main.zig  palette.zig
scripts/converter-zig/src/lib/: stb.zig
src/: demo_image.hpp  main.cpp
src/SD/: bmpread.hpp  raw.hpp  sdcard.hpp
src/boards/ESP32/: boarddefs.hpp
src/boards/feather32u4/: boarddefs.hpp
src/display/: display.hpp
src/epd/: epd.cpp  epd.hpp  epd_565c.cpp  epd_565c.hpp
src/epd5in65f/: epd5in65f.cpp  epd5in65f.h  epd5in65f.hpp  epd_base.cpp  epd_base.hpp  epdif.cpp  epdif.h
src/power/: power.hpp
