[package]
name = "converter-rs"
version = "0.2.5"
edition = "2021"
publish = false

[[bin]]
name = "converter-rs"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.18.0", features = ["persistence"] }
#eframe = "0.18.0"
#egui = "0.18.0"
egui_glow = "0.18.0"
glow = "0.11.0"
rfd = "0.8.4"
futures = "0.3.21"
image = "0.23.14"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]
